--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,16 +8,9 @@
 	</div>
 
 	<div class="form-group pdf" data-num="1">
-		<label for="pdf1" class="col-sm-2 control-label">PDF 1</label>
+		<label for="file1" class="col-sm-2 control-label">File 1</label>
 		<div class="col-sm-10">
-			<input type="file" id="pdf1" name="pdf1" accept="application/pdf,*.pdf" required="required" />
-		</div>
-	</div>
-
-	<div class="form-group pdf" data-num="2">
-		<label for="pdf2" class="col-sm-2 control-label">PDF 2</label>
-		<div class="col-sm-10">
-			<input type="file" id="pdf2" name="pdf2" accept="application/pdf,*.pdf" required="required" />
+			<input type="file" id="file1" name="file1" accept="application/pdf,*.pdf,image/*" required="required" />
 		</div>
 	</div>
 	
