Use a single import that allows multiple files, allow the files to be ordered

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -3,7 +3,9 @@
   <head>
     <title>{{title}}</title>
 
-    <link href="/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/css/font-awesome.min.css">
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 
     <!-- Custom CSS -->
     <style>
@@ -39,6 +41,7 @@
     <!-- /.container -->
 
     <script src="/js/jquery.1.12.4.min.js"></script>
+    <script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="/js/bootstrap.min.js"></script>
     {{#if jsFiles}}
     {{#each jsFiles}}
