--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,17 +8,29 @@
 	</div>
 
 	<div class="form-group pdf" data-num="1">
-		<label for="file1" class="col-sm-2 control-label">File 1</label>
+		<label for="file1" class="col-sm-2 control-label">Files</label>
 		<div class="col-sm-10">
-			<input type="file" id="file1" name="file1" accept="application/pdf,*.pdf,image/*" required="required" />
+			<input type="file" id="file1" name="file1" accept="application/pdf,*.pdf,image/*" required="required" multiple="multiple" />
 		</div>
 	</div>
-	
-	<div class="form-group">
-		<div class="col-sm-offset-2 col-sm-10">
-			<button type="button" class="btn btn-info btn-add-pdf">Add Another PDF</button>
-		</div>
+
+	<div class="col-sm-offset-2 col-sm-10">
+		<table class="table hidden" id="filesTable">
+			<colgroup>
+				<col style="width:15px">
+			</colgroup>
+			<thead>
+				<tr>
+					<th></th>
+					<th>File</th>
+					<th>Type</th>
+				</tr>
+			</thead>
+			<tbody id="filesBody" class="ui-sortable">
+			</tbody>
+		</table>
 	</div>
+
 	<div class="form-group">
 		<div class="col-sm-offset-2 col-sm-10">
 			<button type="submit" class="btn btn-success">Upload</button>
